remove date content@@

--- a/src/app/view/event-detail/event-detail.component.html
+++ b/src/app/view/event-detail/event-detail.component.html
@@ -646,8 +646,8 @@
                                                          </p>
                                  <p class="event_date">
                                                             <span>
-                                                                <span itemprop="startDate" content="2014-07-08T22:00">{{related_events.start_date}}</span>
-                                                                To <span itemprop="endDate" content="2019-07-08T23:30">{{related_events.end_date}}</span>
+                                                                <span itemprop="startDate">{{related_events.start_date}}</span>
+                                                                To <span itemprop="endDate">{{related_events.end_date}}</span>
                                                             </span>
                                 </p>
                                  <p class="time">
